--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-cards",
+  "name": "spacexlaunchprogram1",
   "version": "1.1.0",
   "description": "Server-side Rendering React from Scratch!",
   "main": "index.js",
