--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "nodemon": "^2.0.2"
-  }
+  },
+  "engines": {
+   "node": "12.11.1"
+   }
 }
